--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -307,14 +307,12 @@ input.geocodify:focus {
 
 .selected {
     color: white;
-    background-color: #2262CC;
-    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-    background-image: linear-gradient(to bottom, #0088cc, #0077b3);
-    background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0)
+    background-color: #777;
+}
+
+.geocodify-dropdown li:hover {
+    background: #777;
+    color: #fff;
 }
 
 .mapbox-improve-map {
