--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 {% endblock %}
 
 {% block extra-js %}
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC2t8-7PsV54pTwFsbRwhZ0iidXNBu6-HM"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2t8-7PsV54pTwFsbRwhZ0iidXNBu6-HM"></script>
 
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.geocodify.js"></script>
 
