--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -225,6 +225,12 @@ ol li.clinic-closed:before {
     border-radius: 20px;
     padding: 2px 8px;
     margin: 0 10px 0 0;
+    cursor: pointer;
+}
+
+#filter-list li.filter-selected {
+    background: #777;
+    color: #fff;
 }
 
 #init-list p.open-close-note {
