--- a/templates/500.html
+++ b/templates/500.html
@@ -1,1 +1,5 @@
-Internal Server Error (500)
+{% extends "ngux-tophat/base.html" %}
+
+{% block content %}
+    <h2>Internal Server Error (500)</h2>
+{% endblock %}
