--- a/templates/503.html
+++ b/templates/503.html
@@ -1,1 +1,5 @@
-Service Unavailable (503)
+{% extends "ngux-tophat/base.html" %}
+
+{% block content %}
+    <h2>Service Unavailable (503)</h2>
+{% endblock %}
