--- a/templates/404.html
+++ b/templates/404.html
@@ -1,1 +1,5 @@
-Page Not Found (404)
+{% extends "ngux-tophat/base.html" %}
+
+{% block content %}
+    <h2>Page Not Found (404)</h2>
+{% endblock %}
