--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block extra-css %}
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/site.css" />
     <style type="text/css">
     
     </style>
