--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -1,3 +1,40 @@
-h1 {
-    color: blue;
+body {
+	font-family: 'Roboto', sans-serif;
 }
+
+h1 {
+    font-family: 'Kalam', sans-serif;
+    color: #F2AD94;
+    text-align: center;
+    line-height: 55px;
+}
+
+h1 .site-name {
+	color: #aaa; 
+	font-weight: bold;
+	font-size: 60px;
+}
+
+.btn {
+	font-size: 20px;
+	margin: 40px auto 0;
+	display: block;
+	border-radius: 30px;
+	background: #6295D9;
+	color: #fff;
+	border: 2px solid #fff;
+}
+
+.btn:hover {
+	border: 2px solid #A0C4F2;
+	color: #fff;
+	box-shadow: inset 0 2px 10px rgba(0,0,0,0.3);
+}
+
+.btn:focus, .btn:active {
+	outline: 0;
+	color: #fff;
+}
+
+/*font-family: 'Roboto', sans-serif;
+font-family: 'Kalam', cursive;*/
