init on scripts and start to getting users location

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,9 @@
 {% block content %}
     <h1>get<br/><span class="site-name">tstd today</span></h1>
 
-    <button class="btn">Find clinics near me</button>
+    <button class="btn" id="find_locations">Find clinics near me</button>
 
     <!-- List of prepopulated places based on user's IP -->
-    
+
+    <script type="text/javascript" src="{{ STATIC_URL }}js/scripts.js"></script>
 {% endblock %}
