--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -17,18 +17,18 @@ h1 .site-name {
 
 .btn {
 	font-size: 20px;
-	margin: 40px auto 0;
+	margin: 20px auto 0;
 	display: block;
 	border-radius: 30px;
-	background: #6295D9;
+	background: #ADD9C9;
 	color: #fff;
 	border: 2px solid #fff;
 }
 
 .btn:hover {
 	border: 2px solid #A0C4F2;
-	color: #fff;
-	box-shadow: inset 0 2px 10px rgba(0,0,0,0.3);
+	color: #eee;
+	box-shadow: inset 0 2px 10px rgba(0,0,0,0.2);
 }
 
 .btn:focus, .btn:active {
