--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/site.css" />
 	<link href="https://fonts.googleapis.com/css?family=Kalam|Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Catamaran:900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Catamaran:900" rel="stylesheet">
 
     <style type="text/css">
     
