--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -3,16 +3,18 @@ body {
 }
 
 h1 {
-    font-family: 'Kalam', sans-serif;
+	font-family: 'Roboto', cursive;
     color: #F2AD94;
     text-align: center;
     line-height: 55px;
+    margin: 60px 0 0;
+    letter-spacing: 2px
 }
 
 h1 .site-name {
+	font-family: 'Alfa Slab One', cursive;
 	color: #aaa; 
-	font-weight: bold;
-	font-size: 60px;
+	font-size: 46px;
 }
 
 .btn {
