--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -6,9 +6,10 @@ h1 {
 	font-family: 'Roboto', cursive;
     color: #F2AD94;
     text-align: center;
-    line-height: 55px;
+    line-height: 44px;
     margin: 60px 0 0;
-    letter-spacing: 2px
+    letter-spacing: 2px;
+    font-size: 26px;
 }
 
 h1 .site-name {
