--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -1,3 +1,7 @@
+/*
+https://color.adobe.com/doctors-and-medical-02-color-theme-1780750/edit/?copy=true&base=2&rule=Custom&selected=3&name=Copy%20of%20doctors%20and%20medical%2002&mode=rgb&rgbvalues=0.921569,0.921569,0.94902,0.384314,0.584314,0.85098,0.627451,0.768627,0.94902,0.678431,0.85098,0.788235,0.94902,0.678431,0.580392&swatchOrder=0,1,2,3,4
+*/
+
 body {
 	font-family: 'Roboto', sans-serif;
 }
