--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <div id="ini-content">
         <h1>get<br/><span class="site-name">tstd today</span></h1>
 
-        <button class="btn" id="find_locations">Find clinics near me</button>
+        <button class="btn" id="find-locations">Find clinics near me</button>
     </div>
 
     <!-- List of prepopulated places based on user's IP -->
