--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -56,5 +56,54 @@ h1 .site-name {
 #results-list {
 	display: none;
 }
+
+#results-list p {
+	font-size: 18px;
+	color: #aaa;
+}
+
+ol {
+    display: block;
+    padding: 0 0 0 26px;
+    list-style: none;
+    overflow: hidden;
+    counter-reset: numList;
+    margin: 30px 0 0;
+}
+
+ol li {
+	margin: 0 0 20px;
+    position: relative;
+    padding: 0 0 0 16px;
+    color: #777;
+    font-size: 18px;
+    line-height: 20px;
+    height: 36px;
+    vertical-align: middle;
+    display: block;
+    position: relative;
+}
+
+ol li:before {
+    counter-increment: numList;
+    content: counter(numList);
+    
+    float: left;
+    position: absolute;
+    left: -26px;
+    
+    font: bold 12px sans-serif;
+    text-align: center;
+    color: #fff;
+    line-height: 36px;
+    width: 36px;
+    height: 36px;
+    background: #F2AD94;
+    font-size: 22px;
+    
+    -moz-border-radius: 999px;
+    border-radius: 999px
+}
+
 /*font-family: 'Roboto', sans-serif;
 font-family: 'Kalam', cursive;*/
