--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,8 @@
 
 {% block extra-css %}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/site.css" />
-    <link href="https://fonts.googleapis.com/css?family=Kalam|Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Catamaran:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Roboto:500" rel="stylesheet">
+
 
     <style type="text/css">
     
