--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-	font-family: 'Roboto', cursive;
+	font-family: 'Kalam', cursive;
     color: #F2AD94;
     text-align: center;
     line-height: 44px;
