--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -119,5 +119,15 @@ ol li:before {
     color: #aaa;
 }
 
+#map {
+	display: block;
+	width: 100%;
+	height: 150px;
+	background: #ccc;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+}
+
 /*font-family: 'Roboto', sans-serif;
 font-family: 'Kalam', cursive;*/
