--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,8 @@
 
         <form class="form-inline" id="address-search">
             <div class="form-group">
-                <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
                 <div class="input-group">
-                    <div class="input-group-addon"><i class="fa fa-location-arrow" aria-hidden="true"></i></div>
+                    <div class="input-group-addon" id="find-location"><i class="fa fa-location-arrow" aria-hidden="true"></i></div>
                         <input type="text" class="form-control" id="exampleInputAmount" placeholder="Address">
                         <div class="input-group-addon magnify-addon"><i class="fa fa-search" aria-hidden="true"></i>
                     </div>
