--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,9 @@
 
 
     <div id="ini-content">
-        <h1>get<br/><span class="site-name">tstd today</span></h1>
+        <!-- <h1>get<br/><span class="site-name">tstd today</span></h1> -->
+
+        <h1>Find clinics near you</h1>
 
         <form class="form-inline" id="address-search">
             <div class="form-group">
