--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -3,67 +3,66 @@ https://color.adobe.com/doctors-and-medical-02-color-theme-1780750/edit/?copy=tr
 */
 
 body {
-	font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
-	font-family: 'Kalam', cursive;
+    font-family: 'Roboto', cursive;
     color: #F2AD94;
     text-align: center;
     line-height: 44px;
-    margin: 60px 0 0;
-    letter-spacing: 2px;
+    margin: 0;
     font-size: 26px;
 }
 
 .container {
-	margin-bottom: 150px;
+    margin-bottom: 150px;
 }
 
 h1 .site-name {
-	font-family: 'Alfa Slab One', cursive;
-	color: #aaa; 
-	font-size: 46px;
+    font-family: 'Alfa Slab One', cursive;
+    color: #aaa; 
+    font-size: 46px;
 }
 
 /* hide initially */
-.navbar {
-	display: none;
-}
+/*.navbar {
+    display: none;
+}*/
 
 .navbar-default .navbar-brand {
-	font-family: 'Alfa Slab One', cursive;
+    font-family: 'Alfa Slab One', cursive;
     letter-spacing: 1px;
 }
 
 .btn {
-	font-size: 20px;
-	margin: 20px auto 0;
-	display: block;
-	border-radius: 30px;
-	background: #ADD9C9;
-	color: #fff;
-	border: 2px solid #fff;
+    font-size: 20px;
+    margin: 20px auto 0;
+    display: block;
+    border-radius: 30px;
+    background: #ADD9C9;
+    color: #fff;
+    border: 2px solid #fff;
 }
 
 .btn:hover {
-	border: 2px solid #A0C4F2;
-	color: #eee;
-	box-shadow: inset 0 2px 10px rgba(0,0,0,0.2);
+    border: 2px solid #A0C4F2;
+    color: #eee;
+    box-shadow: inset 0 2px 10px rgba(0,0,0,0.2);
 }
 
 .btn:focus, .btn:active {
-	outline: 0;
-	color: #fff;
+    outline: 0;
+    color: #fff;
 }
 
 #results-list {
-	display: none;
+    display: none;
 }
 
 #results-list p {
-	font-size: 18px;
-	color: #aaa;
+    font-size: 18px;
+    color: #aaa;
 }
 
 ol {
@@ -76,7 +75,7 @@ ol {
 }
 
 ol li {
-	margin: 0 0 30px;
+    margin: 0 0 30px;
     position: relative;
     padding: 0 0 0 16px;
     color: #777;
@@ -117,61 +116,66 @@ ol li:before {
 }
 
 .clinic-distance {
-	display: block;
+    display: block;
     width: 20%;
     float: left;
     color: #aaa;
 }
 
 #map {
-	display: block;
-	width: 100%;
-	height: 150px;
-	background: #eee;
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	border-top: 5px solid #ccc;
+    display: block;
+    width: 100%;
+    height: 150px;
+    background: #eee;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    border-top: 5px solid #ccc;
 }
 
 #address-search {
-	margin: 20px auto;
-	width: 90%;
-	text-align: center;
+    margin: 0 auto;
+    width: 90%;
+    text-align: center;
 }
 
 #address-search .form-control {
-	border-right: none;
-	box-shadow: none;
-	height: 40px;
-	color: #777;
+    border: 2px solid #eee;
+    border-right: none;
+    box-shadow: none;
+    height: 40px;
+    color: #777;
 }
 
 #address-search .input-group-addon {
-	color: #777;
+    border: 2px solid #eee;
+}
+
+#address-search .input-group-addon {
+    color: #777;
 }
 
 #address-search .form-control:focus {
-	border-top: 1px solid #ccc;
-	border-left: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
 }
 
 #address-search .magnify-addon {
-	background: #fff;
+    background: #fff;
 }
 
 #filter-list {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 #filter-list li {
-	display: inline-block;
-	background: #eee;
-	border-radius: 20px;
-	padding: 2px 8px;
+    display: inline-block;
+    background: #eee;
+    border-radius: 20px;
+    padding: 2px 8px;
 }
 
 /*font-family: 'Roboto', sans-serif;
