--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -156,9 +156,9 @@ ol li:before {
 }
 
 #address-search .form-control:focus {
-    border-top: 1px solid #ccc;
-    border-left: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
+    border-top: 2px solid #eee;
+    border-left: 2px solid #eee;
+    border-bottom: 2px solid #eee;
 }
 
 #address-search .magnify-addon {
