--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -108,6 +108,10 @@ ol li:before {
     border-radius: 999px
 }
 
+ol li.clinic-closed:before {
+    background: #ccc;
+}
+
 .clinic-name {
     display: block;
     width: 78%;
@@ -167,8 +171,12 @@ ol li:before {
 
 #filter-list {
     list-style: none;
-    margin: 0;
+    margin: 0 0 20px;
     padding: 0;
+    white-space: nowrap;
+    width: 100%;
+    height: 24px;
+    overflow-x: scroll;
 }
 
 #filter-list li {
@@ -176,6 +184,22 @@ ol li:before {
     background: #eee;
     border-radius: 20px;
     padding: 2px 8px;
+}
+
+.open-close-note .clinic-status-icon {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border-radius: 10px;
+    margin: 0 5px 0 0;
+}
+
+.open-close-note .clinic-open {
+    background: #F2AD94;
+}
+
+.open-close-note .clinic-closed {
+    background: #ccc;
 }
 
 /*font-family: 'Roboto', sans-serif;
