--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
     
     </div><!--.container-->
     <script>
-        console.log();
+        console.log({{ clinics|safe }});
 
         // populate init list
         var items = [];
@@ -67,7 +67,7 @@
             var clinicStatus = (key%2 === 0) ? "clinic-closed" : "clinic-open"; // temporary
 
             var milesText = (key === 0) ? " miles" : ""; // show miles on first
-            items.push( "<li id='" + key + "' class='" + clinicStatus + "'><span class='clinic-name'>" + val.name + "</span><span class='clinic-distance'>" + key + ".2" + milesText + "</span></li>" );
+            items.push( "<li id='" + key + "' class='" + clinicStatus + "'><span class='clinic-name'>" + val.name + "</span><span class='clinic-distance'>" + val.distance.toFixed(1) + milesText + "</span></li>" );
         });
 
         $( "<ol/>", {
