--- a/templates/static/css/site.css
+++ b/templates/static/css/site.css
@@ -128,6 +128,10 @@ ol li.clinic-closed:before {
     margin: 0 2% 0 0;
 }
 
+.clinic-name a {
+    color: #777;
+}
+
 .clinic-distance {
     display: block;
     width: 20%;
