--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
 {% endblock %}
 
 {% block extra-js %}
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.geocodify.js"></script>
 
 {% endblock %}
 
