hiding geolocation unless ssl

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
             <form class="form-inline" id="address-search">
                 <div class="form-group">
                     <div class="input-group">
-                        <div class="input-group-addon" id="find-location"><i class="fa fa-location-arrow" aria-hidden="true"></i></div>
+                        <!--<div class="input-group-addon" id="find-location"><i class="fa fa-location-arrow" aria-hidden="true"></i></div>-->
                             <input type="text" class="form-control" id="geocodify-basic-box" placeholder="Address">
                             <div class="input-group-addon magnify-addon"><i class="fa fa-search" aria-hidden="true"></i>
                         </div>
